LOTS of changes to the engine to enable "quadtree" collision checking.

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -24,7 +24,20 @@
 			}
 		</style>
 		<script src = "../../scripts/statistiks.js"></script>
-		<script src = "lorina.min.js"></script>
+		<script src = "1-lorina.js"></script>
+		<script src = "2-audio.js"></script>
+		<script src = "2-objects.js"></script>
+		<script src = "2-prototype.js"></script>
+		<script src = "3-draw.js"></script>
+		<script src = "3-preloader.js"></script>
+		<script src = "3-text.js"></script>
+		<script src = "4-collisions.js"></script>
+		<script src = "4-move.js"></script>
+		<script src = "4-physics.js"></script>
+		<script src = "5-keyboard.js"></script>
+		<script src = "5-mouse.js"></script>
+		<script src = "5-tilt.js"></script>
+		<script src = "5-touch.js"></script>
 	</head>
 	<body>
 		<canvas id = "canvas" width = "300px" height = "300px"></canvas>
