Webfonts are stupid anyway.

--- a/dev/site/index.html
+++ b/dev/site/index.html
@@ -10,11 +10,8 @@
 </head>
 <body>
 	<div id = "top">
-		<div class = "big">
-			Zambies!
-		</div>
-		<div class = "small">
-			Coming soon to iOS!
+		<div id = "logo">
+			<center><img src = "images/logo.png" title = "Liek...really soon!"></center>
 		</div>
 	</div>
 
@@ -23,11 +20,11 @@
 	</div>
 
 	<div id = "header">
-		So game. Much free. Such fun.
+		<center><img src = "images/doge.png" title = "So excite!"></center>
 	</div>
 
 	<div id = "content">
-		Yup!  Zambies! is a game.  I made a game.  It's an iOS game.  iOS is <b>cool</b>.  But...what's a zambie?
+		Yup!  Zambies!  It's a game.  I made a game.  It's an iOS game.  iOS is <b>cool</b>.  But...what's a zambie?
 		<br>
 		<br>
 		<center>I have no idea.</center>
@@ -40,7 +37,7 @@
 		<br>
 		<center>What they are is up to you.</center>
 		<br>
-		Just make sure you shoot them, kay?  And share our highscore.  Highscores are <b>cool</b> too.
+		Just make sure you shoot them, kay?  And share your highscore.  Highscores are <b>cool</b> too.
 
 		<div id = "copyright">
 			&#169;2014 All rights reserved.
