Made the zombies get mad and added iAds.

--- a/dev/site/index.html
+++ b/dev/site/index.html
@@ -28,7 +28,7 @@
 		All I know is that they chase you and you die when you touch one.  Oh, and they explode when you shoot them.
 		<br>
 		<br>
-		Maybe they're zombies, but probably not.  Maybe they're fairies.  Maybe they're the dust bunnies under your couch finally seeking revenge for their fallen comrades.
+		Maybe they're zombies, but probably not.  Maybe they're fairies.  Maybe they're the fuzz bunnies under your couch finally seeking revenge for their fallen comrades.
 		<br>
 		<br>
 		<center>What they are is up to you.</center>
