Updated the release website.

--- a/dev/site/index.html
+++ b/dev/site/index.html
@@ -10,13 +10,14 @@
 </head>
 <body>
 	<div id = "top">
-		<div id = "logo">
-			<center><img src = "images/logo.png" title = "Liek...really soon!"></center>
+		<div id = "zambies">
+			<center><img src = "images/zambies.png"></center>
+			<center><a href = "https://itunes.apple.com/us/app/zambies!/id840260850?ls=1&mt=8"><img src = "images/store.png" title = "DOWNLOAD NAO PLZ!"></a></center>
 		</div>
 	</div>
 
 	<div id = "icon">
-		<center><img src = "images/icon.png" title = "THIS IS THE COOLEST GAME EVAR!"></center>
+		<center><a href = "https://itunes.apple.com/us/app/zambies!/id840260850?ls=1&mt=8"><img src = "images/icon.png" title = "COOLEST GAME EVAR!"></a></center>
 	</div>
 
 	<div id = "content">
@@ -34,6 +35,10 @@
 		<center>What they are is up to you.</center>
 		<br>
 		Just make sure you shoot them, kay?  And share your highscore.  Highscores are <b>cool</b> too.
+		<br>
+		<br>
+		<br>
+		<center><a href = "http://www.jessemillar.com/"><img src = "images/logo.png"></a></center>
 
 		<div id = "copyright">
 			&#169;2014 All rights reserved.
